<?xml version="1.0" encoding="utf-8"?>
<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/menu_recipe_detail_share"
		android:title="@string/menu_recipe_detail_share"
		android:icon="@drawable/ic_menu_share"
		android:orderInCategory="1"
		app:showAsAction="ifRoom" />

	<item
		android:id="@+id/menu_recipe_detail_shopping_list"
		android:title="@string/menu_recipe_detail_shopping_list"
		android:icon="@null"
		android:orderInCategory="2"
		app:showAsAction="never" />

	<item
		android:id="@+id/menu_recipe_detail_link"
		android:title="@string/menu_recipe_detail_link"
		android:icon="@null"
		android:orderInCategory="3"
		app:showAsAction="never" />

	<item
		android:id="@+id/menu_rate"
		android:title="@string/menu_rate"
		android:icon="@null"
		android:orderInCategory="4"
		app:showAsAction="never" />

	<item
		android:id="@+id/menu_about"
		android:title="@string/menu_about"
		android:icon="@null"
		android:orderInCategory="5"
		app:showAsAction="never" />

	<item
		android:id="@+id/menu_privacy_policy"
		android:title="@string/menu_privacy_policy"
		android:icon="@null"
		android:orderInCategory="6"
		app:showAsAction="never" />

</menu>
