<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/recipe_detail_ingredients"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	app:cardBackgroundColor="@color/global_bg_front"
	app:cardCornerRadius="@dimen/card_corner_radius"
	app:cardElevation="@dimen/global_elevation_2">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<TextView
			android:id="@+id/recipe_detail_ingredients_title"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="@dimen/global_spacing_16"
			android:textAppearance="@style/TextAppearance.Cookbook.Headline"
			android:fontFamily="sans-serif-light"
			android:text="@string/recipe_detail_ingredients_title" />

		<View
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="?attr/dividerHorizontal" />

		<LinearLayout
			android:id="@+id/recipe_detail_ingredients_container"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="@dimen/global_spacing_16"
			android:orientation="vertical">

			<!-- checkbox items will be added programmatically -->

		</LinearLayout>

		<View
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="?attr/dividerHorizontal" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<Button
				android:id="@+id/recipe_detail_ingredients_clear"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/recipe_detail_ingredients_clear"
				style="?android:attr/borderlessButtonStyle" />

			<Button
				android:id="@+id/recipe_detail_ingredients_recalculate"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/recipe_detail_ingredients_recalculate"
				style="?android:attr/borderlessButtonStyle" />

		</LinearLayout>
	</LinearLayout>
</androidx.cardview.widget.CardView>
